--- a/public/500.html
+++ b/public/500.html
@@ -56,11 +56,7 @@
 
 <body>
   <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
       <h1>We're sorry, but something went wrong.</h1>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
-  </div>
+      <h1 style="font-size: 72px;">500 ERROR</h1
 </body>
 </html>
